# cargo-vcpkg

wstest/wstest/: Cargo.toml  build.rs
